--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,36 @@
-﻿cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.2)
 
-# Включение горячей перезагрузки для компиляторов MSVC, если поддерживается.
-if (POLICY CMP0141)
-  cmake_policy(SET CMP0141 NEW)
-  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
+set(PROJECT_VERSION 0.0.${PATCH_VERSION})
+
+project(bulk VERSION ${PROJECT_VERSION})
+
+#configure_file(version.h.in version.h)
+
+add_executable (bulk "main.cpp" "main.h" "CmdHandler.h" "CmdHandler.cpp" "CmdSaver.h"  "CmdSets.h" "CmdPlayer.h" "CmdPlayer.cpp" "CmdSaver.cpp")
+
+set_target_properties(bulk PROPERTIES
+    CXX_STANDARD 20
+    CXX_STANDARD_REQUIRED ON
+)
+target_include_directories(bulk PRIVATE "${CMAKE_BINARY_DIR}")
+
+if (MSVC)
+    target_compile_options(bulk PRIVATE
+        /W4
+    )
+else ()
+    target_compile_options(bulk PRIVATE
+        -Wall -Wextra -pedantic
+    )
 endif()
 
-project ("cmd")
+install(TARGETS bulk RUNTIME DESTINATION bin)
 
-# Добавьте источник в исполняемый файл этого проекта.
-add_executable (cmd "main.cpp" "main.h")
+set(CPACK_GENERATOR DEB)
 
-if (CMAKE_VERSION VERSION_GREATER 3.12)
-  set_property(TARGET cmd PROPERTY CXX_STANDARD 20)
-endif()
+set(CPACK_PACKAGE_VERSION "${PROJECT_VERSION}")
 
-# TODO: Добавьте тесты и целевые объекты, если это необходимо.
+set(CPACK_PACKAGE_CONTACT example@example.com)
+
+include(CPack)
